Bug 159815 - Unexpected content inside content control with track changes and anchored images from DOCX
Summary: Unexpected content inside content control with track changes and anchored ima...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords:
Depends on:
Blocks: DOCX-Content_Control DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2024-02-21 08:38 UTC by Miklos Vajna
Modified: 2024-02-22 16:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (13.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-02-21 08:38 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-02-21 08:38:52 UTC
Created attachment 192679 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document

2) Navigate with the cursor to the middle of the "first" word in the 2nd paragraph.

Expected result: the cursor is outside the content control around the checkbox character (unchecked).

Actual result: the "first" word is part of the content control (black frame appear around "first☐").

The "first" word is not part of the <w:sdt> element when you check it in Word or you check the XML markup manually.

Version: core.git master commit 1b0f67018fa1d514ebca59e081efdd24c1d7811b (docx import: correct redline content-controls, 2024-02-20), earlier versions didn't even open the document.
Comment 1 Commit Notification 2024-02-21 11:33:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/833abb4a197561c34ec59cceb9d7d8a46f6b17ce

tdf#159815 DOCX import: fix redlined to-char image followed by inline SDT

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-02-22 16:18:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b973805565be06aac4422fbb7af530fe8ee04bd0

tdf#159815 DOCX import: fix redlined to-char image followed by inline SDT

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.